// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Channel > renders the channel column with no channel bound, for the slot to fill while none is selected 1`] = `
<DocumentFragment>
  <div
    class="str-chat str-chat__channel"
    id="str-chat__channel"
  >
    empty
  </div>
</DocumentFragment>
`;

exports[`Channel > should render a LoadingIndicator if it is loading 1`] = `
<DocumentFragment>
  <div
    class="str-chat messaging light str-chat__channel"
    id="str-chat__channel"
  >
    <div>
      Loading channel
    </div>
  </div>
</DocumentFragment>
`;
